--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"> <i class="fa fa-bullhorn fa-lg"></i> Hi!</a>
+  <a class="navbar-brand" href="#"> <i class="fa fa-bullhorn fa-lg" ></i> Hi! I'm {{ displayFirstName() }} {{ lastName ? lastName : '...' }} </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,6 +18,22 @@
   </div>
 </nav>
 
+<!-- Prácticas -->
+<div class="container">
+ <div class="row">
+   <div class="col-md-6">
+      <label for="status">Active</label>
+      <input type="radio" name="" id="status" [checked]="status" (click)="activatePerson()">
+      <button (click)="deactivatePerson()">DEACTIVATE</button>
+   </div>
+   <div class="col-md-3 box" (mouseover)="mousingOver()">
+   </div>
+   <div class="col-md-3">
+     <input (keydown)="keyDowning()" type="text">
+  </div>
+ </div>
+</div>
+
 <div class="container">
 
   <router-outlet></router-outlet>
@@ -27,101 +43,3 @@
 <div class="container">
   <app-footer></app-footer>
 </div>
-
-
-
-
-
-
-<!--<h1 [ngStyle]="{color: status ? 'green' : 'red'}">{{firstName}}</h1>-->
-
-
-<!--<br>-->
-
-<!--<h1 [ngClass]="{isActive: status === ''}">{{lastName}}</h1>-->
-
-
-
-
-
-
-
-<!--<ul>-->
-
-  <!--<li *ngFor="let post of posts; let i = index">{{i + 1}} {{post.title}}</li>-->
-
-<!--</ul>-->
-
-
-
-
-
-
-
-
-<!--<h1 *ngIf="status; else notActive">{{ firstName }}</h1>-->
-
-<!--<ng-template #notActive>-->
-
-  <!--<p>Not Active</p>-->
-
-
-<!--</ng-template>-->
-
-
-
-
-
-<!--<input [(ngModel)]="lastName" type="text">-->
-
-<!--<br>-->
-
-<!--{{ lastName }}-->
-
-
-
-<!--<button (click)="greetPerson()">CLICK</button>-->
-
-<!--<br>-->
-
-<!--<div (mouseover)="mousingOver()" class="box">-->
-<!--</div>-->
-
-<!--<br>-->
-
-
-<!--<input (keydown)="keyDowning()" type="text">-->
-
-<!--<br>-->
-
-
-
-<!--<label for="status">Active</label>-->
-<!--<input type='radio' id="status" [checked]="status">-->
-
-
-
-
-<!--<h1>-->
-  <!--Welcome to {{ firstName }} {{ lastName }}!-->
-<!--</h1>-->
-
-<!--<br>-->
-
-
-<!--<hr>-->
-
-
-<!--<br>-->
-
-<!--{{ city ? city : 'No City'}}-->
-
-<!--<br>-->
-
-<!--{{ displayFirstName() }}-->
-
-<!--<br>-->
-
-
-
-
